RESOLVED FIXED8914
"border-collapse: collapse;" for table removes part of its border (was: Border disappears when close to some elements)
https://bugs.webkit.org/show_bug.cgi?id=8914
Summary "border-collapse: collapse;" for table removes part of its border (was: Borde...
Morten Norby Larsen
Reported 2006-05-15 01:27:29 PDT
The gray border around the white upper part is not fully drawn.
Attachments
Test case reduction (607 bytes, text/html)
2006-05-15 04:58 PDT, jonathanjohnsson
no flags
A test case for this bug. The bottom border of a table disappears if it is absolutely positioned, uses box-sizing:border-box, border-collapse:collapse, and overflow:hidden. (31 bytes, text/plain)
2013-01-29 11:09 PST, Phil
no flags
Patch (9.07 KB, patch)
2013-07-18 12:02 PDT, Robert Hogan
no flags
Patch (10.73 KB, patch)
2013-08-12 12:06 PDT, Robert Hogan
no flags
Patch (10.74 KB, patch)
2013-08-12 14:35 PDT, Robert Hogan
no flags
Patch (25.77 KB, patch)
2013-09-04 11:04 PDT, Robert Hogan
no flags
Patch (25.72 KB, patch)
2013-09-04 11:20 PDT, Robert Hogan
no flags
Patch (25.69 KB, patch)
2013-10-15 11:58 PDT, Robert Hogan
no flags
jonathanjohnsson
Comment 1 2006-05-15 04:58:55 PDT
Created attachment 8315 [details] Test case reduction The problem here is "border-collapse: collapse" for the table.
jonathanjohnsson
Comment 2 2006-05-15 05:05:06 PDT
I don't know what "border-collapse: collapse;" does in general, or should do in this case. At least Safari and Firefox render it differently. I searched and found some other bugs related to collapsing in tables, but I don't know if this is a duplicate of any of them.
Joost de Valk (AlthA)
Comment 3 2006-05-15 05:14:13 PDT
Can't see a direct dupe here, but this is definitly wrong... Firefox renders it correctly IMHO.
Morten Norby Larsen
Comment 4 2009-09-11 09:35:56 PDT
Also reproducible in r48276.
Phil
Comment 5 2013-01-29 11:09:14 PST
Created attachment 185270 [details] A test case for this bug. The bottom border of a table disappears if it is absolutely positioned, uses box-sizing:border-box, border-collapse:collapse, and overflow:hidden.
Phil
Comment 6 2013-01-29 11:11:17 PST
Here's an additional test case for this bug: https://gist.github.com/4666558 The bottom border of a table disappears if it is absolutely positioned, uses box-sizing:border-box, border-collapse:collapse, and overflow:hidden.
Yuki Sekiguchi
Comment 7 2013-06-04 23:10:27 PDT
I'll talk about the original content. RenderTableCell draws collapsed border in WebKit. In the content, there is no RenderTableCell at upper-right or lower-right of a table. Since there is no RenderTableCell, we cannot draw borders of the corners.
Yuki Sekiguchi
Comment 8 2013-06-04 23:20:12 PDT
Hi Phil, (In reply to comment #6) > Here's an additional test case for this bug: https://gist.github.com/4666558 > > The bottom border of a table disappears if it is absolutely positioned, uses box-sizing:border-box, border-collapse:collapse, and overflow:hidden. This content have different bug from this bug. I created a new bug for this content. Please watch Bug 117226, if you interested in.
Robert Hogan
Comment 9 2013-07-18 12:02:28 PDT
Dave Hyatt
Comment 10 2013-08-06 13:34:08 PDT
Comment on attachment 207010 [details] Patch If I'm understanding the comment correctly, you're letting both the row group and cell paint the same border? That doesn't work when transparency is involved, e.g., rgba colors.
Robert Hogan
Comment 11 2013-08-12 12:06:18 PDT
EFL EWS Bot
Comment 12 2013-08-12 12:24:20 PDT
EFL EWS Bot
Comment 13 2013-08-12 12:33:44 PDT
Build Bot
Comment 14 2013-08-12 12:48:40 PDT
Build Bot
Comment 15 2013-08-12 13:23:19 PDT
Robert Hogan
Comment 16 2013-08-12 14:35:27 PDT
Robert Hogan
Comment 17 2013-09-04 11:04:31 PDT
Build Bot
Comment 18 2013-09-04 11:11:35 PDT
Build Bot
Comment 19 2013-09-04 11:13:02 PDT
Robert Hogan
Comment 20 2013-09-04 11:20:04 PDT
Dave Hyatt
Comment 21 2013-10-14 13:50:45 PDT
Comment on attachment 210478 [details] Patch r=me
WebKit Commit Bot
Comment 22 2013-10-15 11:48:03 PDT
Comment on attachment 210478 [details] Patch Rejecting attachment 210478 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-01', 'apply-attachment', '--no-update', '--non-interactive', 210478, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: e LayoutTests/fast/table/paint-section-borders-without-cells-vertical-lr.html patching file LayoutTests/fast/table/paint-section-borders-without-cells-vertical-rl-expected.html patching file LayoutTests/fast/table/paint-section-borders-without-cells-vertical-rl.html patching file LayoutTests/fast/table/paint-section-borders-without-cells.html Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'David Hyatt']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output: http://webkit-queues.appspot.com/results/4105018
Robert Hogan
Comment 23 2013-10-15 11:58:34 PDT
WebKit Commit Bot
Comment 24 2013-10-17 10:42:44 PDT
Comment on attachment 214289 [details] Patch Clearing flags on attachment: 214289 Committed r157579: <http://trac.webkit.org/changeset/157579>
WebKit Commit Bot
Comment 25 2013-10-17 10:42:47 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 26 2015-03-26 21:18:18 PDT
I think this caused a quite severe regression in scrolling tables inside overflow:scroll.
Note You need to log in before you can comment on or make changes to this bug.